hphp/test/slow/finally/try_finally_007.php.expectf

Fatal error: An expression is expected here. in %s/try_finally_007.php on line 16
